    new transifex slug
    add Device Protocol File Archive handlers
    add default handlers: ftp ssh mtp gphoto/ptp ifuse fusesmb
    add video thumbnails via ffmpegthumbnailer
    add configure option --disable-video-thumbnails
    add change detection blacklist
    add mount and unmount run-task socket commands
    new maximum Small and Large icon sizes to 256x256
    Show|Display Name %n devnum
    open block device on command line eg spacefm /dev/sdd1
    allow bookmark block devices
    removed File|Save Session
    [GTK2] select next file after delete/rename current #411
    detect subdir mount
    fix evt_device not executed if Devices pane unshown
0.9.4   2014-03-30:
    improve inotify error messages
    configure.ac default make options; fix -Wformat-security warning #416
    adjust new window maximized panel sizes #420
    fix toolbar checkbox item properties icon insensitive #418
    fix panel_sliders-key used as task height 0.9.2-0.9.3 #419
    reset Use-as-opener on import/install plugin; update man
    task error continue no present open task dialog
    gnome-terminal 3.10 no longer accepts --disable-factory #428
    desktop dialogs pop to top #424
    [GTK2] Preferences|Desktop table row collision #427
    [desktop] preserve location of renamed file(s)
    [dialog] remove blank lines reading file into drop, combo, m/list
    [dialog] remove linefeeds inserting value into input/-large
    [dialog] @FILE values not saved on cancel #321
    update translations de ru
    Preferences|Desktop|Font dlg honor cancel
    fix new config devices shown not saved
    path bar middle-click replace contents and activate
    open .desktop treat %u/%U as %f/%F per freedesktop spec
    single-click method no hover selection option #154
    update translations de ru sv
0.9.3   2014-01-17:
    fix memory leak on draw selection rectangle on desktop #397
    [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
    fix maximized panel sliders not restored #402