@@ -12,7 +12,7 @@
 #define SINGLE_CLICK_TIMEOUT 150
 
 // This limits the small icon size for side panes and task list
-#define PANE_MAX_ICON_SIZE 32
+#define PANE_MAX_ICON_SIZE 48
 
 typedef enum {
     WPM_STRETCH,
